--- a/Pages/Todo.razor
+++ b/Pages/Todo.razor
@@ -2,6 +2,13 @@
 
 <h3>Todo</h3>
 
-@code {
+<ul>
+    @foreach (var todo in todos)
+    {
+        <li>2todo.Title</li>
+    }
+</ul>
 
+@code {
+    private List<TodoItem> todos = new();
 }
