created new field newToDo, binded the input value to be assigned to newToDo

--- a/Pages/Todo.razor
+++ b/Pages/Todo.razor
@@ -9,7 +9,7 @@
     }
 </ul>
 
-<input placeholder="something todo" />
+<input placeholder="something todo" @bind="newToDo" />
 <button @onclick="AddToDo">Add todo</button>
 
 @code {
